tinyc/test/bad/struct-as-bool-if.c
struct s
{
    int x;
};

int main()
{
    struct s s;
    if ( s )
        ;
    return 0;
}
